[package]
name = "query-keyboard"
version = "1.0.0"
edition = "2021"
authors = ["texel <texelsensei@posteo.net>"]
description = "Simple CLI tool to check which keys are pressed"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/texel-sensei/query-keyboard"
keywords = ["keyboard", "cli", "x11"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
